--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,6 +14,7 @@
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
 
+
     <application
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
@@ -26,6 +27,10 @@
         android:usesCleartextTraffic="true"
         tools:targetApi="31">
 
+        <meta-data
+            android:name="com.google.android.geo.API_KEY"
+            android:value="AIzaSyBTrgJpuNqdgCmr4J55D9Cul_g4LxRWG4U"/>
+
         <activity
             android:name=".LoginActivity"
             android:exported="true">
@@ -36,8 +41,14 @@
         </activity>
 
         <!-- Register and Main remain normal -->
-        <activity android:name=".RegisterActivity" />
-        <activity android:name=".MainActivity" />
+        <activity
+            android:name=".RegisterActivity"
+            android:exported="false"/>
+
+        <activity
+            android:name=".MainActivity"
+            android:exported="false"/>
+
 
 
         <!-- Remove this if unused -->
